--- a/controlplane/hcloud-ccm-networks.yaml
+++ b/controlplane/hcloud-ccm-networks.yaml
@@ -52,6 +52,9 @@ spec:
           effect: NoSchedule
         - key: "node-role.kubernetes.io/control-plane"
           effect: NoSchedule
+        - key: "node-role.kubernetes.io/etcd"
+          operator: "Exists"
+          effect: "NoExecute"
         - key: "node.kubernetes.io/not-ready"
           effect: "NoSchedule"
       hostNetwork: true
