controlplane: set HCLOUD_LOAD_BALANCERS_* defaults in hcloud-ccm-networks
This will get services of Type LoadBalancer to work out of the box -
otherwise we'd need to manually add the
`load-balancer.hetzner.cloud/location` or
`load-balancer.hetzner.cloud/network-zone` annotation before they're
created.

--- a/controlplane/hcloud-ccm-networks.yaml
+++ b/controlplane/hcloud-ccm-networks.yaml
@@ -86,3 +86,10 @@ spec:
                 secretKeyRef:
                   name: hcloud
                   key: network
+            - name: HCLOUD_LOAD_BALANCERS_NETWORK_ZONE
+              valueFrom:
+                secretKeyRef:
+                  name: hcloud
+                  key: network_zone
+            - name: HCLOUD_LOAD_BALANCERS_USE_PRIVATE_IP
+              value: "true"
